--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-charts": "^5.2.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.6.3",
     "react-select": "^5.10.1",
     "sweetalert2": "^11.22.2",
