--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-google-charts": "^5.2.1",
     "react-hook-form": "^7.60.0",
