--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.3",
     "react-select": "^5.10.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.2",
