--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
+    "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
