--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
@@ -32,6 +32,7 @@
     "react-select": "^5.10.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
+    "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.2",
